
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "number-guessing-game"
version = "0.1.0"
description = "A simple number guessing game."
readme = "README.md"
requires-python = ">=3.10"

[project.scripts]
number-guess = "src.__main__:main"

